[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-scraper-system"
version = "1.0.0"
description = "Production-grade Amazon scraper with memory and retry systems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "gspread>=6.0.1",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.0.0",
    "sentry-sdk>=1.35.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
]
ai = [
    "openai>=1.3.0",
    "anthropic>=0.8.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["E501", "B008"]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true